<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="48dip"
	android:orientation="horizontal"
	android:background="@drawable/footbar_background" >

	<LinearLayout 
		android:id="@+id/footbar_btn_search_layout"
		android:layout_width="64dip"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginTop="3dip"
		android:layout_gravity="center_vertical"
		android:layout_weight="1">
		<ImageButton 
			android:id="@+id/footbar_btn_search"
			android:layout_width="30dip"
			android:layout_height="30dip"
			android:layout_gravity="center"
			android:background="@drawable/footbar_btn_search_style"/>
		<TextView 
			android:id="@+id/footbar_btn_search_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="10dip"
			android:textColor="@android:color/white"
			android:layout_gravity="center"
			android:text="@string/search"/>
	</LinearLayout>

	<LinearLayout 
		android:id="@+id/footbar_btn_fetch_layout"
		android:layout_width="64dip"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginTop="3dip"
		android:layout_gravity="center_vertical"
		android:layout_weight="1">
		<ImageButton
			android:id="@+id/footbar_btn_fetch"
			android:layout_width="30dip"
			android:layout_height="30dip"
			android:layout_gravity="center"
			android:background="@drawable/footbar_btn_fetch_style"/>
		<TextView 
			android:id="@+id/footbar_btn_fetch_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="10dip"
			android:textColor="@android:color/white"
			android:layout_gravity="center"
			android:text="@string/fetch"/>
	</LinearLayout>

	<LinearLayout 
		android:id="@+id/footbar_btn_checkin_layout"
		android:layout_width="64dip"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:layout_marginTop="3dip"
		android:layout_gravity="center_vertical"
		android:orientation="vertical">
		<ImageButton 
			android:id="@+id/footbar_btn_checkin"
			android:layout_width="30dip"
			android:layout_height="30dip"
			android:layout_gravity="center"
			android:background="@drawable/footbar_btn_checkin_style"
			/>
		<TextView 
			android:id="@+id/footbar_btn_checkin_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="10dip"
			android:textColor="@android:color/white"
			android:layout_gravity="center"
			android:text="@string/checkin"/>
	</LinearLayout>

	<LinearLayout 
		android:id="@+id/footbar_btn_focus_layout"
		android:layout_width="64dip"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginTop="3dip"
		android:layout_gravity="center_vertical"
		android:layout_weight="1">
		<ImageButton 
			android:id="@+id/footbar_btn_focus"
			android:layout_width="30dip"
			android:layout_height="30dip"
			android:layout_gravity="center"
			android:background="@drawable/footbar_btn_focus_style"/>
		<TextView 
			android:id="@+id/footbar_btn_focus_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="10dip"
			android:textColor="@android:color/white"
			android:layout_gravity="center"
			android:text="@string/focus"/>
	</LinearLayout>

	<LinearLayout 
		android:id="@+id/footbar_btn_settings_layout"
		android:layout_width="64dip"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginTop="3dip"
		android:layout_gravity="center_vertical"
		android:layout_weight="1">
		<ImageButton
			android:id="@+id/footbar_btn_settings"
			android:layout_width="30dip"
			android:layout_height="30dip"
			android:layout_gravity="center"
			android:background="@drawable/footbar_btn_settings_style"/>
		<TextView 
			android:id="@+id/footbar_btn_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textSize="10dip"
			android:textColor="@android:color/white"
			android:text="@string/settings"/>
	</LinearLayout>

</LinearLayout>
